# Project-Phantasm

./: AGENTS.md  Cargo.toml  GAME_ENGINE_PLAN.md  justfile
crates/phantasm-agent/: Cargo.toml
crates/phantasm-agent/src/: lib.rs
crates/phantasm-audio/: Cargo.toml
crates/phantasm-audio/src/: lib.rs
crates/phantasm-core/: Cargo.toml
crates/phantasm-core/src/: lib.rs
crates/phantasm-engine/: Cargo.toml
crates/phantasm-engine/src/: main.rs
crates/phantasm-input/: Cargo.toml
crates/phantasm-input/src/: lib.rs
crates/phantasm-render/: Cargo.toml
crates/phantasm-render/src/: lib.rs
crates/phantasm-script/: Cargo.toml
crates/phantasm-script/src/: lib.rs
games/hello/: project.toml
games/hello/scripts/: hello.luau
