[workspace]
resolver = "2"
members = [
    "crates/phantasm-core",
    "crates/phantasm-render",
    "crates/phantasm-input",
    "crates/phantasm-audio",
    "crates/phantasm-script",
    "crates/phantasm-agent",
    "crates/phantasm-engine",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
log = "0.4"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
